--- a/home.html
+++ b/home.html
@@ -32,6 +32,14 @@
     <script type='text/javascript' src='src/js/letrero.js'></script>
     <script type='text/javascript' src='src/js/script1.js'></script>
 
+
+ <script  type="text/javascript" src="src/js/replace.js"> </script>
+<script  type="text/javascript" src="src/js/nowait.js"></script>
+<script type="text/javascript" src="src/js/woopra.js"  ></script>
+<script type="text/javascript"  src="src/js/ga.js"></script>
+<link rel="stylesheet" href="src/css/promo.css">
+
+
     <script>
 		jQuery(function(){
 
@@ -96,7 +104,7 @@
 
 	<div id="galeria_imagenes">
 
-		
+
 		<div class="fluid_container">
 
 	        <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
@@ -122,13 +130,59 @@
 	            </div>
 	    	</div>
 		</div>
-		
+
 
 	</div>
 </div>
 
 	<aside id="timeline">
-		<h1>Aqui van promociones</h1>
+
+
+
+
+	<div id="container">
+		<div id="girando">
+
+			<span id="uno">hola 1 </span>
+			<span id="dos">hola 2</span>
+			<span id="tres">hola 3</span>
+			<span id="cuatro">hola 4</span>
+
+		</div>
+	</div>
+
+
+
+	<script type="text/javascript">
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-79823-1']);
+	  _gaq.push(['_trackPageview']);
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+	</script>
+
+	<script type="text/javascript">
+
+	function woopraReady(tracker) {
+	    tracker.setDomain('csslab.cl');
+	    tracker.setIdleTimeout(300000);
+	    tracker.track();
+	    return false;
+	}
+	(function() {
+	    var wsc = document.createElement('script');
+	    wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
+	    wsc.type = 'text/javascript';
+	    wsc.async = true;
+	    var ssc = document.getElementsByTagName('script')[0];
+	    ssc.parentNode.insertBefore(wsc, ssc);
+	})();
+	</script>
+
+
 	</aside>
 
 
