--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
 
 				<nav id='cssmenu' >  <!-- id="menuNav">-->
 					<ul>
-		            	<li class='active'><a class="boton_menu" href="Index.html">Home</a></li>
+		            	<li class='active'><a class="boton_menu" href="home.html">Home</a></li>
 		            	<li><a class="boton_menu" href="src/html/menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="src/html/agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="src/html/contacto.html">Contacto</a></li>
