--- a/src/html/administrador/administra_promociones.html
+++ b/src/html/administrador/administra_promociones.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="../../css/estilo1.css">
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
+    <script type='text/javascript' src='../../js/llena_promocion.js'></script>
 </head>
 	<body>
 		<header>
@@ -26,7 +27,7 @@
 					<nav id='cssmenu'>
 						<ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
-			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
+			           <li><a class="boton_menu" onclick="pidePromociones()">Promociones</a></li>
 			            	<li><a class="boton_menu" href="envia_correo.html">Envia promociones</a></li>
 						</ul>
 					</nav>
@@ -37,7 +38,7 @@
 		<br>
 		<h2>Promociones</h2>
 		<div id = "reservaciones">
-			<div class="recuadro"></div>
+
 		</div>
 
 	</body>
