--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
+    <script type='text/javascript' src='../../js/llena_promocion.js'></script>
 	</head>
 	<body>
 
@@ -29,7 +30,7 @@
                 <nav id='cssmenu'>
                     <ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
-			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
+			            	<li><a class="boton_menu" onclick="pidePromociones()">Promociones</a></li>
 			            	<li><a class="boton_menu" href="envia_correo.html">Envia promociones</a></li>
                     </ul>
                 </nav>
