--- a/src/html/administrador/confirma_reservacion.html
+++ b/src/html/administrador/confirma_reservacion.html
@@ -11,6 +11,7 @@
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
     <script type='text/javascript' src='../../js/jquery.js'></script>
+    <script type='text/javascript' src='../../js/llena_promocion.js'></script>
 	</head>
 	<body>
 
@@ -30,7 +31,7 @@
                 <nav id='cssmenu'>
                     <ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
-			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
+			           <li><a class="boton_menu" onclick="pidePromociones()">Promociones</a></li>
 			            	<li><a class="boton_menu" href="envia_correo.html">Envia promociones</a></li>
                     </ul>
                 </nav>
