--- a/src/html/administrador/reservaciones.html
+++ b/src/html/administrador/reservaciones.html
@@ -10,6 +10,7 @@
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
     <script type='text/javascript' src='../../js/script.js'></script>
+    <script type='text/javascript' src='../../js/llena_promocion.js'></script>
 
 </head>
 	<body>
