--- a/home.html
+++ b/home.html
@@ -31,7 +31,8 @@
     <script type='text/javascript' src='src/js/camera.min.js'></script>
     <script type='text/javascript' src='src/js/letrero.js'></script>
     <script type='text/javascript' src='src/js/script1.js'></script>
-
+    <script type='text/javascript' src='src/js/script.js'></script>
+    <script type='text/javascript' src='src/js/llenaCubo.js'></script>
 
  <script  type="text/javascript" src="src/js/replace.js"> </script>
 <script  type="text/javascript" src="src/js/nowait.js"></script>
@@ -83,7 +84,7 @@
 
 				<nav id='cssmenu' >  <!-- id="menuNav">-->
 					<ul>
-		            	<li class='active'><a class="boton_menu" href="home.html">Home</a></li>
+		            	<li class='active'><a class="boton_menu" onclick="llena_Cubo('')">Home</a></li>
 		            	<li><a class="boton_menu" href="src/html/menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="src/html/agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="src/html/contacto.html">Contacto</a></li>
@@ -142,12 +143,6 @@
 
 	<div id="container">
 		<div id="girando">
-
-			<span id="uno">hola 1 </span>
-			<span id="dos">hola 2</span>
-			<span id="tres">hola 3</span>
-			<span id="cuatro">hola 4</span>
-
 		</div>
 	</div>
 
