--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -5,6 +5,7 @@
     <title>El Kfetal®</title>
     <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
     <script type='text/javascript' src='../js/script_menu.js'></script>
+    <script type='text/javascript' src='../js/script.js'></script>
     <script type='text/javascript' src='../js/letrero.js'></script>..  <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
     <link rel="stylesheet" type="text/css" href="../css/estilo1.css">
     <!--COpia de INdex-->
@@ -73,7 +74,7 @@
                     </section>
                     <nav id='cssmenu'>
                         <ul>
-                           <li class="li_menu"><a class="boton_menu" href="../../home.html">Home</a></li>
+                           <li class='active'><a class="boton_menu" onclick="llena_Cubo('../../')">Home</a></li>
                             <li class="li_menu"><a class="boton_menu" href="menu.html">Menú</a></li>
                             <li class="li_menu"><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
                             <li class="li_menu"><a class="boton_menu" href="contacto.html">Contacto</a></li>
