--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -8,6 +8,7 @@
     <script type='text/javascript' src='../js/letrero.js'></script>
     <script type='text/javascript' src='../js/jquery.min.js'></script>
     <script type='text/javascript' src='../js/script1.js'></script>
+    <script type='text/javascript' src='../js/script.js'></script>
 
 </head>
 
@@ -35,7 +36,7 @@
                 </section>
                 <nav id='cssmenu'>
                     <ul>
-                        <li class='active' ><a class="boton_menu" href="../../home.html">Home</a></li>
+                        <li class='active'><a class="boton_menu" onclick="llena_Cubo('../../')">Home</a></li>
                         <li><a class="boton_menu" href="menu.html">Menú</a></li>
                         <li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
                         <li><a class="boton_menu" href="contacto.html">Contacto</a></li>
