--- a/src/html/administrador/administra_promociones.html
+++ b/src/html/administrador/administra_promociones.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
-	<link rel="stylesheet" href="../../css/estilo1.css">
 	<link rel="stylesheet" href="../../css/formularioPromo.css">
+	<link rel="stylesheet" href="../../css/estilo1.css">
+<script type='text/javascript' src='../../js/script.js'></script>
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
     <script type='text/javascript' src='../../js/llena_promocion.js'></script>
@@ -22,7 +23,7 @@
 				<div id="navegacion">
 
 					<section id="espacio_sup">
-				<a href="../../../home.html" style = " float:right">Cerrar sesion</a>
+				<a onclick="llena_Cubo('../../../')" style = " float:right">Cerrar sesion</a>
 
 					</section>
 					<nav id='cssmenu'>
