--- a/src/html/administrador/confirma_reservacion.html
+++ b/src/html/administrador/confirma_reservacion.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" href="../../css/estilo1.css">
 	<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
+	<script type='text/javascript' src='../../js/script.js'></script>
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
     <script type='text/javascript' src='../../js/jquery.js'></script>
@@ -25,7 +26,7 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-	<a href="../../../home.html" style = " float:right">Cerrar sesion</a>
+	<a onclick="llena_Cubo('../../../')" style = " float:right">Cerrar sesion</a>
 
                 </section>
                 <nav id='cssmenu'>
