--- a/src/html/administrador/reservaciones.html
+++ b/src/html/administrador/reservaciones.html
@@ -24,7 +24,7 @@
 				<div id="navegacion">
 
 					<section id="espacio_sup">
-				<a href="../../../home.html" style = " float:right">Cerrar sesion</a>
+				<a onclick="llena_Cubo('../../../')" style = " float:right">Cerrar sesion</a>
 
 					</section>
 					<nav id='cssmenu'>
