--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -6,7 +6,8 @@
     <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
     <script type='text/javascript' src='../js/script_menu.js'></script>
     <script type='text/javascript' src='../js/script.js'></script>
-    <script type='text/javascript' src='../js/letrero.js'></script>..  <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
+    <script type='text/javascript' src='../js/letrero.js'></script>
+    <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
     <link rel="stylesheet" type="text/css" href="../css/estilo1.css">
     <!--COpia de INdex-->
     <link rel='stylesheet' id='camera-css'  href='../css/camera.css' type='text/css' media='all'>
@@ -57,20 +58,13 @@
             <div id="menu">
 
                 <div id="logo">
-                    <img src="../images/Logo1.jpg" id="logoNav">
+                    <img src="../images/Logo2.jpg" id="logoNav">
                 </div>
 
                 <div id="navegacion">
 
                     <section id="espacio_sup">
-                    <a href="inicio.html" style = " float:right">Inicio de sesion</a>
-                    <div  id = "letrero" style = "position: absolute">
-                     <span>
-                     <img src="../images/cafe.gif" draggable="false">
-                     <font size="5">Kfetal</font>
-                     <img src="../images/cafe.gif" draggable="false">
-                     </span>
-                     <div>
+                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
                     </section>
                     <nav id='cssmenu'>
                         <ul>
@@ -83,6 +77,7 @@
                     </nav>
                 </div>
             </div>
+
         </header>
         <div id="principal">
                 <div class="contenido" id="menu_almientos">
