--- a/home.html
+++ b/home.html
@@ -15,7 +15,6 @@
     <script type='text/javascript' src='src/js/jquery.mobile.customized.min.js'></script>
     <script type='text/javascript' src='src/js/jquery.easing.1.3.js'></script>
     <script type='text/javascript' src='src/js/camera.min.js'></script>
-    <script type='text/javascript' src='src/js/letrero.js'></script>
     <script type='text/javascript' src='src/js/script1.js'></script>
     <script type='text/javascript' src='src/js/script.js'></script>
     <script type='text/javascript' src='src/js/llenaCubo.js'></script>
@@ -55,17 +54,8 @@
 			<div id="navegacion">
 
 				<section id="espacio_sup">
-				<a href="src/html/inicio.html" style = " float:right">Inicio de sesion</a>
-
-				<div  id = "letrero" style = "position: absolute">
-				<span>
-				<img src="src/images/cafe.gif" draggable="false">
-				<font size="5">Kfetal</font>
-				<img src="src/images/cafe.gif" draggable="false">
-				</span>
-				<div>
-
-				</section>
+                    <a href="src/html/inicio.html" class="btnAdmin">|o|<br> m </a>
+                    </section>
 
 
 				<nav id='cssmenu' >  <!-- id="menuNav">-->
