--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -16,7 +16,6 @@
     <script type='text/javascript' src='../js/script1.js'></script>
 
  	<script src= "../js/moverMesa.js"></script>
- 	<script type='text/javascript' src='../js/letrero.js'></script>
 	<style>
 	.mesa{display: inline-block; padding: 5%;}
 	table{width:100%;height: 100%;  text-align: center;}
@@ -35,16 +34,8 @@
 
 
 				<section id="espacio_sup">
-					<a href="inicio.html" style = " float:right">Inicio de sesion</a>
-
-				<div  id = "letrero" style = "position: absolute">
-				<span>
-				<img src="../images/cafe.gif" draggable="false">
-				<font size="5">Kfetal</font>
-				<img src="../images/cafe.gif" draggable="false">
-				</span>
-				<div>
-				</section>
+                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
+                    </section>
 
 
 
