--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -21,8 +21,8 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-                <a href="inicio.html" style = " float:right">Inicio de sesion</a>
-                </section>
+                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
+                    </section>
                 <nav id='cssmenu'>
                     <ul>
                         <li class='active'><a class="boton_menu" onclick="llena_Cubo('../../') ">Home</a></li>
