--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -6,7 +6,6 @@
     <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
     <script type='text/javascript' src='../js/script_menu.js'></script>
     <script type='text/javascript' src='../js/script.js'></script>
-    <script type='text/javascript' src='../js/letrero.js'></script>
     <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
     <link rel="stylesheet" type="text/css" href="../css/estilo1.css">
     <!--COpia de INdex-->
@@ -64,7 +63,7 @@
                 <div id="navegacion">
 
                     <section id="espacio_sup">
-                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
+                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
                     </section>
                     <nav id='cssmenu'>
                         <ul>
@@ -82,16 +81,17 @@
         <div id="principal">
                 <div class="contenido" id="menu_almientos">
                     <ul>
-                        <li class="lin" id="cafe">Cafe</li>
-                        <li class="lin" id="infusion">Infusiones</li>
-                        <li class="lin" id="chai">Te Chai</li>
-                        <li class="lin" id="capuchino">Capuchino</li>
-                        <li class="lin" id="malteada">Malteadas</li>
-                        <li class="lin" id="soda">Soda Italiana</li>
+                        <li class="lin" id="cafe">Café</li>
+                        <li class="lin" id="cappp">Cappuccino</li>
+                        <li class="lin" id="frap">Frappe</li>
                         <li class="lin" id="smoot">Smoothies</li>
-                        <li class="lin" id="frap">Frappes</li>
+                        <li class="lin" id="soda_ita">Soda Italiana</li>
+                        <li class="lin" id="malteada">Malteadas</li>
+                        <li class="lin" id="chamo">Chamoyadas</li>
+                        <li class="lin" id="infusi">Infusiones</li>
+                        <li class="lin" id="te_chai">Té Chaí</li>
                         <li class="lin" id="snack">Snack</li>
-                        <li class="lin" id="otros">Otros</li>
+                        <li class="lin" id="postre">Postres</li>
                     </ul>
                 </div>
             <div class="contenido" id="galeria_menu">
