--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -18,8 +18,9 @@
  	<script src= "../js/moverMesa.js"></script>
  	<script type='text/javascript' src='../js/letrero.js'></script>
 	<style>
-	.mesa{display: inline-block; padding: 5%;}
-	table{width:100%;height: 100%;  text-align: center;}
+	.mesa{display: inline-block; padding: 1%;}
+	table{width:100%;height: 58%;  text-align: center; }
+	.espacio{height: 30%; padding: 4%;};		  
 	</style>
 </head>
 	<body>
@@ -64,6 +65,7 @@
 
 		<h3> Mapa de Mesas </h3>
 		<div id = "mapa_mesas">
+		<div class="espacio"></div>
 		<table>
 		<tr>
 		<td><img id = "1" src="../images/mesa.png" dragstart="" class = "mesa" draggable="true"></td>
