--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -81,7 +80,7 @@
         <div id="principal">
                 <div class="contenido" id="menu_almientos">
                     <ul>
-                        <li class="lin" id="cafe">Café</li>
+                        <li class="lin" id="cafe" style="background-color : #d9222e">Café</li>
                         <li class="lin" id="cappp">Cappuccino</li>
                         <li class="lin" id="frap">Frappe</li>
                         <li class="lin" id="smoot">Smoothies</li>
@@ -99,33 +98,55 @@
         <div class="fluid_container">
 
             <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
-                <div data-thumb="../images/home/slides/thumbs/bridge.jpg" data-src="../images/home/slides/bridge.jpg">
-
-
-
-                </div>
-                <div data-thumb="../images/home/slides/thumbs/leaf.jpg" data-src="../images/home/slides/leaf.jpg">
+                
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_01.jpg" data-src="../images/menu/cafe/cafe_01.jpg">
 
                 </div>
-                <div data-thumb="../images/home/thumbs/road.jpg" data-src="../images/home/slides/road.jpg">
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_02.jpg" data-src="../images/menu/cafe/cafe_02.jpg">
 
                 </div>
-                <div data-thumb="../images/home/thumbs/sea.jpg" data-src="../images/home/slides/sea.jpg">
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_03.jpg" data-src="../images/menu/cafe/cafe_03.jpg">
 
                 </div>
-                <div data-thumb="../images/home/thumbs/shelter.jpg" data-src="../images/home/slides/shelter.jpg">
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_04.jpg" data-src="../images/menu/cafe/cafe_04.jpg">
 
                 </div>
-                <div data-thumb="../images/home/thumbs/tree.jpg" data-src="../images/home/slides/tree.jpg">
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_05.jpg" data-src="../images/menu/cafe/cafe_05.jpg">
 
                 </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_06.jpg" data-src="../images/menu/cafe/cafe_06.jpg">
+
+                </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_07.jpg" data-src="../images/menu/cafe/cafe_07.jpg">
+
+                </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_08.jpg" data-src="../images/menu/cafe/cafe_08.jpg">
+
+                </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_09.jpg" data-src="../images/menu/cafe/cafe_09.jpg">
+
+                </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_10.jpg" data-src="../images/menu/cafe/cafe_10.jpg">
+
+                </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_11.jpg" data-src="../images/menu/cafe/cafe_11.jpg">
+
+                </div>
+                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_12.jpg" data-src="../images/menu/cafe/cafe_12.jpg">
+
+                </div>
+
         </div>
     </div>
 </div>
 
             </div>
             <div class="contenido" id="descripcion_menu">
-             descripcion
+                <strong>Expresso:</strong> shot de café puro que consiste de una onza y media. Excelente para los amantes del café y un disparo de energía al cuerpo.
+                <br><br>
+                <strong>Expresso doble:</strong> 3 onzas de café puro para los temerarios y adoradores del sabor del café.
+                <br><br>
+                <strong>Expresso cortado:</strong>  Misma cantidad de café puro. Se le llama cortado ya que se agrega un toque de leche a la preparación.
             </div>
         </div>
     </body>
