--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -78,68 +78,65 @@
 
         </header>
         <div id="principal">
-                <div class="contenido" id="menu_almientos">
-                    <ul>
-                        <li class="lin" id="cafe" style="background-color : #d9222e">Café</li>
-                        <li class="lin" id="cappp">Cappuccino</li>
-                        <li class="lin" id="frap">Frappe</li>
-                        <li class="lin" id="smoot">Smoothies</li>
-                        <li class="lin" id="soda_ita">Soda Italiana</li>
-                        <li class="lin" id="malteada">Malteadas</li>
-                        <li class="lin" id="chamo">Chamoyadas</li>
-                        <li class="lin" id="infusi">Infusiones</li>
-                        <li class="lin" id="te_chai">Té Chaí</li>
-                        <li class="lin" id="snack">Snack</li>
-                        <li class="lin" id="postre">Postres</li>
-                    </ul>
-                </div>
+            <div class="contenido" id="menu_almientos">
+                <ul>
+                    <li class="lin" id="cafe" style="background-color : #d9222e">Café</li>
+                    <li class="lin" id="capp">Cappuccino</li>
+                    <li class="lin" id="frap">Frappe</li>
+                    <li class="lin" id="smoot">Smoothies</li>
+                    <li class="lin" id="soda_ita">Soda Italiana</li>
+                    <li class="lin" id="malteada">Malteadas</li>
+                    <li class="lin" id="chamo">Chamoyadas</li>
+                    <li class="lin" id="infusi">Infusiones</li>
+                    <li class="lin" id="te_chai">Té Chaí</li>
+                    <li class="lin" id="snack">Snack</li>
+                    <li class="lin" id="postre">Postres</li>
+                </ul>
+               </div>
             <div class="contenido" id="galeria_menu">
                 <div style="width:100%">
-        <div class="fluid_container">
+                    <div class="fluid_container" id="cambio">
+                        
+                        <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_01.jpg" data-src="../images/menu/cafe/cafe_01.jpg">
 
-            <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
-                
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_01.jpg" data-src="../images/menu/cafe/cafe_01.jpg">
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_02.jpg" data-src="../images/menu/cafe/cafe_02.jpg">
 
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_03.jpg" data-src="../images/menu/cafe/cafe_03.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_04.jpg" data-src="../images/menu/cafe/cafe_04.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_05.jpg" data-src="../images/menu/cafe/cafe_05.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_06.jpg" data-src="../images/menu/cafe/cafe_06.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_07.jpg" data-src="../images/menu/cafe/cafe_07.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_08.jpg" data-src="../images/menu/cafe/cafe_08.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_09.jpg" data-src="../images/menu/cafe/cafe_09.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_10.jpg" data-src="../images/menu/cafe/cafe_10.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_11.jpg" data-src="../images/menu/cafe/cafe_11.jpg">
+
+                            </div>
+                            <div data-thumb="../images/menu/cafe/cafe_prew/cafe_12.jpg" data-src="../images/menu/cafe/cafe_12.jpg">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_02.jpg" data-src="../images/menu/cafe/cafe_02.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_03.jpg" data-src="../images/menu/cafe/cafe_03.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_04.jpg" data-src="../images/menu/cafe/cafe_04.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_05.jpg" data-src="../images/menu/cafe/cafe_05.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_06.jpg" data-src="../images/menu/cafe/cafe_06.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_07.jpg" data-src="../images/menu/cafe/cafe_07.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_08.jpg" data-src="../images/menu/cafe/cafe_08.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_09.jpg" data-src="../images/menu/cafe/cafe_09.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_10.jpg" data-src="../images/menu/cafe/cafe_10.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_11.jpg" data-src="../images/menu/cafe/cafe_11.jpg">
-
-                </div>
-                <div data-thumb="../images/menu/cafe/cafe_prew/cafe_12.jpg" data-src="../images/menu/cafe/cafe_12.jpg">
-
-                </div>
-
-        </div>
-    </div>
-</div>
-
             </div>
             <div class="contenido" id="descripcion_menu">
                 <strong>Expresso:</strong> shot de café puro que consiste de una onza y media. Excelente para los amantes del café y un disparo de energía al cuerpo.
