--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -34,7 +34,7 @@
 
 
 				<section id="espacio_sup">
-                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
+                    <a href="src/html/inicio.html" class="btnAdmin">|o|<br> m </a>
                     </section>
 
 
