--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -24,7 +24,7 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
+                    <a href="src/html/inicio.html" class="btnAdmin">|o|<br> m </a>
                     </section>
                 <nav id='cssmenu'>
                     <ul>
@@ -47,7 +47,7 @@
 
 <div class = "contenedor">
 <div class = "texto">
-<h1> El Kfetal </h1>
+<h1 style="color : black"> El Kfetal </h1>
 <p><font size=4 > Te atenderemos con gusto <br> AV. Palmas No 109, Col. El rosal <br> de lunes a viernes de 6:30 hrs a 22.00 hrs<br> sabado de 9:00 hrs a 22:00 hrs <br> llamanos al 67-96-15-94 </font></p>
 </div>
 <div id = "mapa">
