--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -21,9 +21,8 @@
             </div>
 
             <div id="navegacion">
-
-                <section id="espacio_sup">
-                    <a href="inicio.html" class="inicioAdmin">Inicio</a>
+					<section id="espacio_sup">
+                    <a href="src/html/inicio.html" class="btnAdmin">|o|<br> m </a>
                     </section>
                 <nav id='cssmenu'>
                     <ul>
