solucion de promocion

--- a/home.html
+++ b/home.html
@@ -44,7 +44,8 @@
 
 </head>
 
-	<body>
+	<body >
+
 		<header>
 		<div id="menu">
 
@@ -70,7 +71,7 @@
 
 				<nav id='cssmenu' >  <!-- id="menuNav">-->
 					<ul>
-		            	<li class='active'><a class="boton_menu" onclick="llena_Cubo('')">Home</a></li>
+		            	<li class='active'><a class="boton_menu"  href="#">Home</a></li>
 		            	<li><a class="boton_menu" href="src/html/menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="src/html/agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="src/html/contacto.html">Contacto</a></li>
