--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -50,7 +50,7 @@
 
 					<nav id='cssmenu'>
 						<ul>
-		            	<li class='active'><a class="boton_menu" onclick="llena_Cubo('../../')">Home</a></li>
+		            	<li class='active'><a class="boton_menu"  href="../../home.html">Home</a></li>
 		            	<li><a class="boton_menu" href="menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="contacto.html">Contacto</a></li>
