--- a/src/html/administrador/administra_promociones.html
+++ b/src/html/administrador/administra_promociones.html
@@ -23,7 +23,7 @@
 				<div id="navegacion">
 
 					<section id="espacio_sup">
-				<a onclick="llena_Cubo('../../../')" style = " float:right">Cerrar sesion</a>
+				<a href="../../../home.html" style = " float:right">Cerrar sesion</a>
 
 					</section>
 					<nav id='cssmenu'>
