solucion de promocion

--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -21,7 +21,7 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-                    <a href="src/html/inicio.html" class="btnAdmin">|o|<br> m </a>
+                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
                     </section>
                 <nav id='cssmenu'>
                     <ul>
