--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	
+
 	<link rel="stylesheet" href="../css/estilo1.css">
 	<link rel="stylesheet" href="../css/formulario.css">
 	<script type='text/javascript' src='../js/script.js'></script>
@@ -18,7 +18,7 @@
 	<style>
 	.mesa{display: inline-block; padding: 1%;}
 	table{width:100%;height: 58%;  text-align: center; }
-	.espacio{height: 30%; padding: 4%;};		  
+	.espacio{height: 30%; padding: 4%;};
 	</style>
 </head>
 	<body>
@@ -34,7 +34,7 @@
 
 
 				<section id="espacio_sup">
-                    <a href="src/html/inicio.html" class="btnAdmin">|o|<br> m </a>
+                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
                     </section>
 
 
