1RAseparacion css,falta darle otra limpiada

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<title>El Kfetal®</title>
 	<link rel="stylesheet" href="src/css/estilo1.css">
 	<link rel='stylesheet' id='camera-css'  href='src/css/camera.css' type='text/css' media='all'>
-	<link rel="stylesheet" href="src/css/promo.css">
+	<link rel="stylesheet" href="src/css/estilo_home.css">
 
 <script  type="text/javascript" src="src/js/replace.js"> </script>
 <script  type="text/javascript" src="src/js/nowait.js"></script>
