--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 
 	<link rel="stylesheet" href="../css/estilo1.css">
-    <link rel="stylesheet" type="text/css" href="../css/miCss.css">
+    <link rel="stylesheet" href="../css/estilo_nosotros.css">
+    <!--link rel="stylesheet" type="text/css" href="../css/miCss.css"-->
     <script type='text/javascript' src='../js/jquery.min.js'></script>
     <script type='text/javascript' src='../js/script1.js'></script>
     <script type='text/javascript' src='../js/script.js'></script>
@@ -13,8 +15,8 @@
 
 
 
-<body style="">
-    <header>
+<body>
+   <!-- <header>
         <div id="menu">
 
             <div id="logo">
@@ -36,46 +38,36 @@
                     </ul>
                 </nav>
             </div>
-<!--
-            <div id="inicioSesion">
-
-            </div>
--->
         </div>
-    </header>
+    </header>-->
+
+    <div class = "principal">
+        <h1 style="color : black; margin-left: 5px">Nuesta Historia</h1>
+        <div class = "contenido" id="info">
+        El Kfetal nace en el año 2014 como un proyecto de negocio de Angélica y Arturo. Siendo amantes del café y acostumbrados a tomar una buena taza por las mañanas para iniciar el día, vieron la oportunidad de abrir el negocio pensando en el gusto de las personas que como ellos, inician su jornada laboral muy temprano. <br><br>
+        Por el rumbo no existía ninguna opción para poder tomar un buen café o comprar un alimentosano y completo a esa hora (06:30 am, horario en el que el Kfetal abre sus puertas) a precios accesibles y con excelente calidad y pensando en cualquier tipo de presupuesto. En el mes de enero comenzaron los preparativos para buscar las herramientas para formar una cafetería que aunque chiquita, lleva un gran pedazo de esfuerzo y corazón impresos en todo lo que se ofrece y se hace para satisfacer el gusto de todos sus clientes.
+        Su lema, <big><b>“NO SERVIR NADA QUE ELLOS NO COMERÍAN”</b></big><br><br>
+        A punto de cumplir un año de apertura, los clientes que los frecuentan y los que apenas comienzan su gusto por visitarlos han hecho de “el Kfetal” un lugar de buena vibra, donde encontrarán productos de alta calidad y buenos precios, además de una sonrisa por parte de sus anfitriones. <br><br><br>
+        <big><b>Visión:</b></big> <br><br>
+
+        Ser la mejor opción dentro de la variedad de cafeterías de la zona, comercializando productos de la más alta calidad y ofreciendo el mejor servicio, creando un ambiente cordial y confortable para disfrutar de un buen café con la mejor compañía. <br><br>
+
+        <big><b>Misión:</b></big> <br><br>
+
+        Trabajar para mejorar las expectativas de nuestros clientes, entregando productos que satisfagan todos los gustos, contribuyendo a la diversidad de restaurantes y cafeterías de la zona. <br><br>
+
+            <li>Innovar constantemente con productos variados.</li>
+            <li>Entregar productos de la más alta calidad.</li>
+            <li>Desarrollar relaciones fuertes entre clientes, empleados y proveedores.</li>
+            <li>Agregar valor a todos nuestros productos y servicios.</li>
 
 
+        </div>
 
-
-
-<div class = "info">
-<h1 style="color : black; margin-left: 5px">Nuesta Historia</h1>
-<div class = "cuadro">
-El Kfetal nace en el año 2014 como un proyecto de negocio de Angélica y Arturo. Siendo amantes del café y acostumbrados a tomar una buena taza por las mañanas para iniciar el día, vieron la oportunidad de abrir el negocio pensando en el gusto de las personas que como ellos, inician su jornada laboral muy temprano. <br><br>
-Por el rumbo no existía ninguna opción para poder tomar un buen café o comprar un alimentosano y completo a esa hora (06:30 am, horario en el que el Kfetal abre sus puertas) a precios accesibles y con excelente calidad y pensando en cualquier tipo de presupuesto. En el mes de enero comenzaron los preparativos para buscar las herramientas para formar una cafetería que aunque chiquita, lleva un gran pedazo de esfuerzo y corazón impresos en todo lo que se ofrece y se hace para satisfacer el gusto de todos sus clientes.
-Su lema, <big><b>“NO SERVIR NADA QUE ELLOS NO COMERÍAN”</b></big><br><br>
-A punto de cumplir un año de apertura, los clientes que los frecuentan y los que apenas comienzan su gusto por visitarlos han hecho de “el Kfetal” un lugar de buena vibra, donde encontrarán productos de alta calidad y buenos precios, además de una sonrisa por parte de sus anfitriones. <br><br><br>
-<big><b>Visión:</b></big> <br><br>
-
-Ser la mejor opción dentro de la variedad de cafeterías de la zona, comercializando productos de la más alta calidad y ofreciendo el mejor servicio, creando un ambiente cordial y confortable para disfrutar de un buen café con la mejor compañía. <br><br>
-
-<big><b>Misión:</b></big> <br><br>
-
-Trabajar para mejorar las expectativas de nuestros clientes, entregando productos que satisfagan todos los gustos, contribuyendo a la diversidad de restaurantes y cafeterías de la zona. <br><br>
-
-    <li>Innovar constantemente con productos variados.</li>
-    <li>Entregar productos de la más alta calidad.</li>
-    <li>Desarrollar relaciones fuertes entre clientes, empleados y proveedores.</li>
-    <li>Agregar valor a todos nuestros productos y servicios.</li>
-
-
-</div>
-<div class = "cuadro-derecho">
-<img src="../images/home/principal_14.jpg" alt="local" width="500px" height="600px">
-</div>
-</div>
-
-
+        <div class = "contenido" id="imagen">
+        <img id="img_nos" src="../images/home/principal01.jpg" alt="local">
+        </div>
+    </div>
 
 </body>
 </html>
