--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 	<link rel="stylesheet" href="../css/estilo1.css">
-	<link rel="stylesheet" href="../css/formulario.css">
+	<link rel="stylesheet" href="../css/estilo_agenda_reservacion.css">
 	<script type='text/javascript' src='../js/script.js'></script>
 	<script type='text/javascript' src='../js/jquery.min.js'></script>
 
@@ -73,15 +73,15 @@
 
 				<span>Nombre</span>
 				<br>
-				<input type="text" id="nombre" placeholder="Carlos Augusto" required >
+				<input type="text" id="nombre" placeholder="Juan Gonzales" required >
 				<br>
 				<span>Teléfono</span>
 				<br>
-				<input type="text" id="telefono" placeholder="5623892311" required>
+				<input type="text" id="telefono" placeholder="5525856535" required>
 				<br>
 				<span>Correo electrónico</span>
 				<br>
-				<input type="text" id="correo" placeholder="elkfetal@gmail.com" required>
+				<input type="text" id="correo" placeholder="correo@gmail.com" required>
 				<br>
 				<span>Fecha</span>
 				<br>
