--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>El Kfetal®</title>
     <link rel="stylesheet" href="../css/estilo1.css">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/estilo_inicio.css">
     <script type='text/javascript' src='../js/jquery.min.js'></script>
     <script type='text/javascript' src='../js/script1.js'></script>
     <script src="../js/script.js"></script>
