--- a/home.html
+++ b/home.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
-	<link rel="stylesheet" href="src/css/estilo1.css">
+	<!--link rel="stylesheet" href="src/css/estilo1.css"-->
 	<link rel='stylesheet' id='camera-css'  href='src/css/camera.css' type='text/css' media='all'>
 	<link rel="stylesheet" href="src/css/estilo_home.css">
-
+	<link rel="stylesheet" href="src/css/estilo_nav.css">
+	<link rel="stylesheet" href="src/css/estilo_html.css">
 <script  type="text/javascript" src="src/js/replace.js"> </script>
 <script  type="text/javascript" src="src/js/nowait.js"></script>
 <script type="text/javascript" src="src/js/woopra.js"  ></script>
@@ -59,7 +60,7 @@
                     </section>
 
 
-				<nav id='cssmenu' >  <!-- id="menuNav">-->
+				<nav id='cssmenu' >
 					<ul>
 		            	<li class='active'><a class="boton_menu"  href="#">Home</a></li>
 		            	<li><a class="boton_menu" href="src/html/menu.html">Menú</a></li>
@@ -69,11 +70,6 @@
 					</ul>
 				</nav>
 			</div>
-<!--
-			<div id="inicioSesion">
-
-			</div>
--->
 		</div>
 	</header>
 
