--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>El Kfetal®</title>
-    <link rel="stylesheet" href="../css/estilo1.css">
+    <!--link rel="stylesheet" href="../css/estilo1.css"-->
+    <link rel="stylesheet" href="../css/estilo_nav.css">
+    <link rel="stylesheet" href="../css/estilo_html.css">
     <link rel="stylesheet" href="../css/estilo_inicio.css">
     <script type='text/javascript' src='../js/jquery.min.js'></script>
     <script type='text/javascript' src='../js/script1.js'></script>
