--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,8 @@
     <script type='text/javascript' src='../js/script_menu.js'></script>
     <script type='text/javascript' src='../js/script.js'></script>
     <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
-    <link rel="stylesheet" type="text/css" href="../css/estilo1.css">
+    <link rel="stylesheet" href="../css/estilo_nav.css">
+    <link rel="stylesheet" href="../css/estilo_html.css">
     <!--COpia de INdex-->
     <link rel='stylesheet' id='camera-css'  href='../css/camera.css' type='text/css' media='all'>
     <style>
