--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-	<link rel="stylesheet" href="../css/estilo1.css">
+	<!--link rel="stylesheet" href="../css/estilo1.css"-->
+	<link rel="stylesheet" href="../css/estilo_nav.css">
+    <link rel="stylesheet" href="../css/estilo_html.css">
 	<link rel="stylesheet" href="../css/estilo_agenda_reservacion.css">
 	<script type='text/javascript' src='../js/script.js'></script>
 	<script type='text/javascript' src='../js/jquery.min.js'></script>
