--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -4,8 +4,10 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" >
 	<title>El Kfetal®</title>
+	<link rel="stylesheet" href="../css/estilo_nav.css">
+    <link rel="stylesheet" href="../css/estilo_html.css">
 	<link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
-	<link rel="stylesheet" href="../css/estilos1.css">
+	<!--link rel="stylesheet" href="../css/estilos1.css"-->
 	<script type="text/javascript" src="../ckeditor/ckeditor.js"></script>
     <script type='text/javascript' src='../js/jquery.min.js'></script>
     <script type='text/javascript' src='../js/script1.js'></script>
