--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 
-	<link rel="stylesheet" href="../css/estilo1.css">
+	<!--link rel="stylesheet" href="../css/estilo1.css"-->
+    <link rel="stylesheet" href="../css/estilo_nav.css">
+    <link rel="stylesheet" href="../css/estilo_html.css">
     <link rel="stylesheet" href="../css/estilo_nosotros.css">
     <!--link rel="stylesheet" type="text/css" href="../css/miCss.css"-->
     <script type='text/javascript' src='../js/jquery.min.js'></script>
@@ -16,7 +18,7 @@
 
 
 <body>
-   <!-- <header>
+    <header>
         <div id="menu">
 
             <div id="logo">
@@ -39,7 +41,7 @@
                 </nav>
             </div>
         </div>
-    </header>-->
+    </header>
 
     <div class = "principal">
         <h1 style="color : black; margin-left: 5px">Nuesta Historia</h1>
