--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -61,8 +61,8 @@
 		<div class="espacio"></div>
 		<table>
 		<tr>
-		<td><img id = "1" src="../images/mesa.png" dragstart="" class = "mesa" draggable="true"></td>
-		<td><img id = "2" src="../images/mesa.png" class = "mesa" draggable="true"></td>
+		<td><img id = "1" src="../images/mesa2.png" dragstart="" class = "mesa" draggable="true"></td>
+		<td><img id = "2" src="../images/mesa2.png" class = "mesa" draggable="true"></td>
 		</tr>
 		<tr>
 		<td><img id = "3" src="../images/mesa.png" class = "mesa" draggable="true"></td>
