--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -110,6 +110,12 @@
 			</div>
 
 		</div>
+		<footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
 	</body>
 
 </html>
