--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -69,6 +69,12 @@
     <div id="data"></div>
 </center>
 
+<footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
 
 
 
