--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -124,5 +124,11 @@
                 <strong>Expresso cortado:</strong>  Misma cantidad de café puro. Se le llama cortado ya que se agrega un toque de leche a la preparación.
             </div>
         </div>
+        <footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
     </body>
 </html>
