--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -70,6 +70,12 @@
         <img id="img_nos" src="../images/home/principal01.jpg" alt="local">
         </div>
     </div>
+    <footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
 
 </body>
 </html>
