--- a/home.html
+++ b/home.html
@@ -130,7 +130,12 @@
 
 
 
-
+<footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
 	</body>
 </html>
 
