--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -52,12 +52,18 @@
 <div class = "contenedor">
 <div class = "texto">
 <h1 style="color : black"> El Kfetal </h1>
-<p><font size=4 > Te atenderemos con gusto <br> AV. Palmas No 109, Col. El rosal <br> de lunes a viernes de 6:30 hrs a 22.00 hrs<br> sabado de 9:00 hrs a 22:00 hrs <br> llamanos al 67-96-15-94 </font></p>
+<p><font size=4 > Te atenderemos con gusto <br> AV. Palmas No 109, Col. El rosal <br>lunes a viernes de 6:30 hrs a 22.00 hrs<br>sabado de 9:00 hrs a 22:00 hrs <br>llamanos al 67-96-15-94 </font></p>
 </div>
 <div id = "mapa">
 <iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d1882.65000797974!2d-99.24824683903412!3d19.31278344583351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d19.312808699999998!2d-99.2484624!5e0!3m2!1ses!2smx!4v1430441381434" width="550" height="400" frameborder="0" style="border:0"></iframe>
 </div>
 </div>
+<footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
 
 </body>
 </html>
