--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -63,5 +63,11 @@
 		]
 		});
 		</script>
+		<footer>
+        <span id="foot">
+            <p  id="footText">El Kfetal Cafeteria<br>
+                Tel. 67-96-15-94</p>
+        </span>
+    </footer>
 </body>
 </html>
