--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -11,13 +11,16 @@
 	<link rel="stylesheet" href="../css/estilo_agenda_reservacion.css">
 	<script type='text/javascript' src='../js/script.js'></script>
 	<script type='text/javascript' src='../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
 
-	<script type='text/javascript' src='../js/script1.js'></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 
- 	<style>
+ 	<script src= "../js/moverMesa.js"></script>
+	<style>
 	.mesa{display: inline-block; padding: 1%;}
-	table{width:100%;height: 58%;  text-align: center; }
-	.espacio{height: 30%; padding: 4%;};
+	table{width:75%;height: 48%;  text-align: center; }
+	.espacio{height: 10%; padding: 4%;}
 	</style>
 </head>
 	<body>
@@ -57,12 +60,12 @@
 		<div class="espacio"></div>
 		<table>
 		<tr>
-		<td><img id = "1" src="../images/mesa2.png" dragstart="" class = "mesa" draggable="true"></td>
-		<td><img id = "2" src="../images/mesa2.png" class = "mesa" draggable="true"></td>
+		<td><img id = "1" src="../images/mesa.png" dragstart="" class = "mesa" draggable="true" onClick="cambia(this.id)"></td>
+		<td><img id = "2" src="../images/mesa.png" class = "mesa" draggable="true" onClick="cambia(this.id)"></td>
 		</tr>
 		<tr>
-		<td><img id = "3" src="../images/mesa.png" class = "mesa" draggable="true"></td>
-		<td><img id = "4" src="../images/mesa.png" class = "mesa" draggable="true"></td>
+		<td><img id = "3" src="../images/mesa2.png" class = "mesa" draggable="true" onClick="cambia(this.id)"></td>
+		<td><img id = "4" src="../images/mesa2.png" class = "mesa" draggable="true" onClick="cambia(this.id)"></td>
 		</tr>
 		</table>
 		</div>
