--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -87,13 +87,18 @@
 				<br>
 				<input type="date" id="dia_reservacion"  required>
 				<br>
-				<span>Hora de llegada</span>
+				<span>Hora de  tu reservacion</span>
 				<br>
-				<input type="time" id="hora_llegada"  required>
-				<br>
-				<span>Hora de salida</span>
-				<br>
-				<input type="time" id="hora_salida"  required>
+				<select>
+  				<option >10:00 am - 10:30 am</option>
+  				<option >10:30 am - 11:00 am</option>
+  				<option >11:00 am - 11:30 am</option>
+  				<option >11:30 am - 12:00 am</option>
+  				<option >12:00 am - 12:30 am</option>
+  				<option >12:30 am - 01:00 pm</option>
+  				<option >01:00 pm - 01:30 pm</option>
+				</select>
+
 				<br>
 				<span>No. de personas</span>
 				<br>
