--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -89,8 +89,8 @@
 				<br>
 				<span>Hora de  tu reservacion</span>
 				<br>
-				<select>
-  				<option >10:00 am - 10:30 am</option>
+				<select >
+  				<option value="10:00 am - 10:30 am" >10:00 am - 10:30 am</option>
   				<option >10:30 am - 11:00 am</option>
   				<option >11:00 am - 11:30 am</option>
   				<option >11:30 am - 12:00 am</option>
@@ -102,7 +102,11 @@
 				<br>
 				<span>No. de personas</span>
 				<br>
-				<input type="number" id="n_personas" placeholder="4" required>
+				<select >
+  				<option value="1 - 4" >1 - 4</option>
+  				<option > 4 -8</option>
+				</select>
+
 				<br><br>
 				<button onclick="valida_reservacion()"> Reservar</button>
 				<br>
