--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" href="../css/estilo_nav.css">
     <link rel="stylesheet" href="../css/estilo_html.css">
 	<link rel="stylesheet" href="../css/estilo_agenda_reservacion.css">
-	<script type='text/javascript' src='../js/script.js'></script>
+	
 	<script type='text/javascript' src='../js/jquery.min.js'></script>
-    <script type='text/javascript' src='../js/script1.js'></script>
-
+	<script type='text/javascript' src='../js/script.js'></script>
+	<script type='text/javascript' src='../js/script1.js'></script>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 
@@ -89,20 +89,37 @@
 				<br>
 				<span>Hora de  tu reservacion</span>
 				<br>
-				<select >
-  				<option value="10:00 am - 10:30 am" >10:00 am - 10:30 am</option>
+				<select id = "hora">
+  				<option >10:00 am - 10:30 am</option>
   				<option >10:30 am - 11:00 am</option>
   				<option >11:00 am - 11:30 am</option>
-  				<option >11:30 am - 12:00 am</option>
-  				<option >12:00 am - 12:30 am</option>
-  				<option >12:30 am - 01:00 pm</option>
-  				<option >01:00 pm - 01:30 pm</option>
-				</select>
+  				<option >11:30 am - 12:00 pm</option>
+  				<option >12:00 pm - 12:30 pm</option>
+  				<option >12:30 pm - 13:00 pm</option>
+  				<option >13:00 pm - 13:30 pm</option>
+				<option >13:30 pm - 14:00 pm</option>
+  				<option >14:00 pm - 14:30 pm</option>
+  				<option >14:30 pm - 15:00 pm</option>
+  				<option >15:00 pm - 15:30 pm</option>
+  				<option >15:30 pm - 16:00 pm</option>
+  				<option >16:00 pm - 16:30 pm</option>
+				<option >16:30 pm - 17:00 pm</option>
+  				<option >17:00 pm - 17:30 pm</option>
+  				<option >17:30 pm - 18:00 pm</option>
+  				<option >18:00 pm - 18:30 pm</option>
+  				<option >18:30 pm - 19:00 pm</option>
+  				<option >19:00 pm - 19:30 pm</option>
+				<option >19:30 pm - 20:00 pm</option>
+  				<option >20:00 pm - 20:30 pm</option>
+				<option >20:30 pm - 21:00 pm</option>
+  				<option >21:00 pm - 21:30 pm</option>
+				<option >21:30 pm - 22:00 pm</option>
+  				</select>
 
 				<br>
 				<span>No. de personas</span>
 				<br>
-				<select >
+				<select  id = "personas">
   				<option value="1 - 4" >1 - 4</option>
   				<option > 4 -8</option>
 				</select>
