Ya muestra promociones d ela BD

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
@@ -102,7 +102,7 @@
                 </div>
                 <div data-thumb="src/images/home/principal_prew/principal07.jpg" data-src="src/images/home/principal07.jpg">
                 </div>
-	    	</div>	
+	    	</div>
 		</div>
 
 
