--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
@@ -8,17 +9,17 @@
 	<link rel="stylesheet" href="src/css/estilo_home.css">
 	<link rel="stylesheet" href="src/css/estilo_nav.css">
 	<link rel="stylesheet" href="src/css/estilo_html.css">
-<script  type="text/javascript" src="src/js/replace.js"> </script>
-<script  type="text/javascript" src="src/js/nowait.js"></script>
-<script type="text/javascript" src="src/js/woopra.js"  ></script>
-<script type="text/javascript"  src="src/js/ga.js"></script>
-   <script type='text/javascript' src='src/js/jquery.min.js'></script>
-    <script type='text/javascript' src='src/js/jquery.mobile.customized.min.js'></script>
-    <script type='text/javascript' src='src/js/jquery.easing.1.3.js'></script>
-    <script type='text/javascript' src='src/js/camera.min.js'></script>
-    <script type='text/javascript' src='src/js/script1.js'></script>
-    <script type='text/javascript' src='src/js/script.js'></script>
-    <script type='text/javascript' src='src/js/llenaCubo.js'></script>
+	<script type="text/javascript" src="src/js/woopra.js"  ></script>
+	<script  type="text/javascript" src="src/js/replace.js"> </script>
+	<script  type="text/javascript" src="src/js/nowait.js"></script>
+	<script type="text/javascript"  src="src/js/ga.js"></script>
+   	<script type='text/javascript' src='src/js/jquery.min.js'></script>
+    	<script type='text/javascript' src='src/js/jquery.mobile.customized.min.js'></script>
+    	<script type='text/javascript' src='src/js/jquery.easing.1.3.js'></script>
+    	<script type='text/javascript' src='src/js/camera.min.js'></script>
+    	<script type='text/javascript' src='src/js/script1.js'></script>
+    	<script type='text/javascript' src='src/js/script.js'></script>
+    	<script type='text/javascript' src='src/js/llenaCubo.js'></script>
 
     <style>
 
